# acli

./: .gitignore  .pre-commit-config.yaml  ACLI_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  quickstart.yml  release.yml  security.yml
docs/: contributing.md  example.md  index.md  robots.txt
docs/python-sdk/: app.md  commands.md  errors.md  index.md  introspection.md  output.md  skill.md
docs/sdks/: index.md
docs/spec/: compliance.md  discovery.md  dry-run.md  errors.md  evolution.md  exit-codes.md  index.md  output.md
docs/superpowers/plans/: 2026-04-21-skill-md-agentskills-standard.md
docs/tutorial/: index.md
examples/citecheck-tutorial/: .gitignore  README.md  pyproject.toml
examples/citecheck-tutorial/examples/: report.md
examples/citecheck-tutorial/src/citecheck/: __init__.py  main.py  semantic.py
examples/citecheck-tutorial/tests/: test_citecheck.py
examples/weather/: SKILL.md  weather.py
examples/weather-java/: README.md  pom.xml
examples/weather-java/src/main/java/dev/acli/examples/weather/: WeatherMain.java  WeatherMeta.java  WeatherModel.java
examples/weather-java/src/test/java/dev/acli/examples/weather/: WeatherExampleTest.java
examples/weather-rust/: Cargo.toml  README.md
examples/weather-rust/src/: main.rs  model.rs
examples/weather-rust/tests/: cli.rs
examples/weather-ts/: README.md  package-lock.json  package.json  tsup.config.ts
examples/weather-ts/src/: weather.ts
examples/weather-ts/tests/: weather.test.ts
sdks/dotnet/: README.md
sdks/dotnet/Acli.Spec/: Acli.Spec.csproj  AcliApp.cs  AcliError.cs  CliFolder.cs  Envelope.cs  ExitCode.cs  Introspect.cs  Output.cs  OutputFormat.cs  Skill.cs  Suggest.cs
sdks/dotnet/Acli.Spec.Tests/: Acli.Spec.Tests.csproj  BasicTests.cs
sdks/go/: README.md  acli_test.go  app.go  cli_folder.go  doc.go  errors.go  exitcode.go  go.mod  introspect.go  output.go  skill.go  suggest.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/dev/acli/: AcliApp.java  AcliError.java  CliFolder.java  CommandInfo.java  CommandTree.java  Example.java  ExitCode.java  Output.java  OutputFormat.java  ParamInfo.java  Skill.java  SuggestFlag.java
sdks/java/src/main/java/dev/acli/picocli/: BuiltInCommands.java
sdks/java/src/test/java/dev/acli/: SdkTest.java
sdks/python/: README.md  pyproject.toml
sdks/python/src/acli/: __init__.py  app.py  cli.py  cli_folder.py  command.py  errors.py  exit_codes.py  introspect.py  output.py  skill.py
sdks/python/src/acli/templates/: main.py.tpl  pyproject.toml.tpl
sdks/python/tests/: test_app.py  test_auto_inject.py  test_cli.py  test_cli_folder.py  test_command.py  test_errors.py  test_exit_codes.py  test_introspect.py  test_output.py  test_skill.py  test_streaming.py
sdks/r/: .gitignore  DESCRIPTION  NAMESPACE  README.md
sdks/r/R/: acli.R
sdks/r/tests/: testthat.R
sdks/r/tests/testthat/: test-acli.R
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: app.rs  cli_folder.rs  command.rs  errors.rs  exit_codes.rs  introspect.rs  lib.rs  macros.rs  output.rs  skill.rs
sdks/rust/tests/: integration_test.rs
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: app.ts  cli-folder.ts  errors.ts  exit-codes.ts  index.ts  introspect.ts  output.ts  skill.ts
sdks/typescript/tests/: sdk.test.ts
