[package]
name = "weather-acli-example"
version = "1.0.0"
edition = "2021"
description = "ACLI weather CLI example (Rust) — mirrors examples/weather/weather.py"
license = "EUPL-1.2"
publish = false

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
acli = { path = "../../sdks/rust" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
