[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acli-spec"
version = "0.5.0"
description = "Python SDK for the ACLI (Agent-friendly CLI) specification"
readme = "README.md"
license = "EUPL-1.2"
requires-python = ">=3.10"
authors = [{ name = "ACLI Contributors" }]
keywords = ["cli", "agent", "ai", "specification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
acli = "acli.cli:main"

[project.urls]
Homepage = "https://github.com/alpibrusl/acli"
Documentation = "https://alpibrusl.github.io/acli"
Repository = "https://github.com/alpibrusl/acli"
Issues = "https://github.com/alpibrusl/acli/issues"
Changelog = "https://github.com/alpibrusl/acli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acli"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "RUF",    # ruff-specific
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PLC", "PLE", "PLW", # pylint
]
ignore = [
    "S101",    # allow assert in tests
    "BLE001",  # allow broad exception catches (needed for introspect resilience)
    "B008",    # typer.Option() in defaults is standard Typer pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005", "S", "T20", "PLC0415", "TC003", "PT017", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["acli"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["typer", "typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["acli.cli"]
disallow_untyped_decorators = false

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=acli",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
