[package]
name = "acli"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the ACLI (Agent-friendly CLI) specification"
license = "EUPL-1.2"
repository = "https://github.com/alpibrusl/acli"
documentation = "https://alpibrusl.github.io/acli"
keywords = ["cli", "agent", "ai", "specification", "clap"]
categories = ["command-line-interface", "development-tools"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
